# lidar_perception

./: .gitignore  CMakeLists.txt  README.md  main_node.cpp  package.xml
config/: obstacle_detection.json  parameters_backup.txt
example/: bbox_example.cpp  calibrate_example.cpp  cluster_example.cpp  curb_example.cpp  datas_load.cpp  datas_load.h  passthough_example.cpp  pcd_example.cpp  segment_example.cpp  voxel_example.cpp
include/builder/: bbox_filter.h  bbox_fitting.h  bbox_fitting_lshape.h  convex_hull.h
include/common/utils/: kdtree3d.h  matrix.h  types.h
include/detect/: curb_detect.h  grid.h  kalman_filter.h  tracker.h
include/filter/: outlier_filter.h  roi_filter.h  voxel_filter.h
include/msgs/: TrackingObjectInfo.h
include/process/: lidar_process.h
include/render/: render.h
include/segment/: DBSCAN_kdtree.h  clustering.h  object_cluster.h  object_segment.h
include/tracker/: kalman_filter.h  rotated_iou.h  tracker.h  tracking.h  velocity.h
msg/: DetectionObjectInfo.msg  ObjectInfoArray.msg
src/: CMakeLists.txt  main_node.cpp
src/builder/: bbox_filter.cpp  bbox_fitting.cpp  bbox_fitting_lshape.cpp  convex_hull.cpp
src/common/json/: json_reader.cpp  json_value.cpp
src/config/: obstacle_detection.json
src/detect/: curb_detect.cpp  grid.cpp  kalman_filter.cpp
src/filter/: outlier_filter.cpp  roi_filter.cpp  voxel_filter.cpp
src/include/builder/: bbox_filter.h  convex_hull.h
src/include/common/utils/: point3d.h  types.h
src/include/detect/: curb_detect.h
src/include/manager/: config_manager.h
src/include/msgs/: DetectionObjectInfo.h  ObjectInfoArray.h
src/include/segment/: object_cluster.h  object_segment.h
src/include/tracker/: munkres.h  velocity.h
src/manager/: config_manager.cpp
src/msg/: TrackingObjectInfo.msg
src/process/: lidar_process.cpp
src/render/: render.cpp
src/segment/: clustering.cpp  object_cluster.cpp  object_segment.cpp
src/src/builder/: bbox_fitting.cpp
src/src/common/utils/: matrix.cpp
src/src/detect/: curb_detect.cpp  grid.cpp  tracker.cpp
src/src/filter/: outlier_filter.cpp
src/src/manager/: config_manager.cpp
src/src/process/: lidar_process.cpp
src/src/segment/: object_segment.cpp
src/src/tracker/: tracking.cpp
src/tracker/: kalman_filter.cpp  rotated_iou.cpp  tracker.cpp  tracking.cpp  velocity.cpp
